Removed the message and post code validation
